--- a/FlixTv/Views/Shared/ClientComponents/_Catalog.cshtml
+++ b/FlixTv/Views/Shared/ClientComponents/_Catalog.cshtml
@@ -383,3 +383,16 @@
         </div>
     </div>
 </div>
+
+@section bodyScripts {
+    <script type="text/javascript">
+        // Your additional scripts for this partial view
+        console.log("Additional script in partial view");
+    </script>
+}
+
+
+
+
+
+
