--- a/FlixTv/Views/Shared/_ClientLayout.cshtml
+++ b/FlixTv/Views/Shared/_ClientLayout.cshtml
@@ -34,14 +34,16 @@
     <!-- catalog -->
     @Html.Partial("~/Views/Shared/ClientComponents/_Catalog.cshtml")
     <!-- end catalog -->
-
     <!-- plan -->
     @Html.Partial("~/Views/Shared/ClientComponents/_Plan.cshtml")
     <!-- end plan -->
-
     <!-- footer -->
     @Html.Partial("~/Views/Shared/ClientComponents/_Footer.cshtml")
     <!-- end footer -->
+  i
+
+    @RenderSection("bodyScripts", required: false)
+
 
     <!-- JS -->
     <script src="~/www/main/js/jquery-3.5.1.min.js"></script>
@@ -53,5 +55,7 @@
     <script src="~/www/main/js/jquery.magnific-popup.min.js"></script>
     <script src="~/www/main/js/plyr.min.js"></script>
     <script src="~/www/main/js/main.js"></script>
+
+
 </body>
 </html>
