--- a/FlixTv/Views/Shared/ClientComponents/_Footer.cshtml
+++ b/FlixTv/Views/Shared/ClientComponents/_Footer.cshtml
@@ -69,7 +69,7 @@
                         <a href="privacy.html">Privacy policy</a>
                         <a href="privacy.html">Terms and conditions</a>
                     </div>
-                    <small class="footer__copyright">© FlixTV.template, 2021. Created by <a href="https://themeforest.net/user/dmitryvolkov/portfolio" target="_blank">Dmitry Volkov</a>.</small>
+                    <small class="footer__copyright">© FlixTV 2023. Created by Mixalis Palierakis.</small>
                 </div>
             </div>
         </div>
