--- a/FlixTv/Views/Shared/ClientComponents/_NavigationBar.cshtml
+++ b/FlixTv/Views/Shared/ClientComponents/_NavigationBar.cshtml
@@ -9,20 +9,25 @@
                         <span></span>
                         <span></span>
                     </button>
-
-                    <a href="index.html" class="header__logo">
+                    @*-----------Logo Start-------------*@
+                    <a href="@Url.Action("Index", "Home")" class="header__logo">
                         <img src="~/www/main/img/logo.svg" alt="Movies & TV Shows, Online cinema HTML Template">
                     </a>
+                    @*-----------Logo End-------------*@
 
                     <ul class="header__nav">
+                        @*-----------Home Start-------------*@
                         <li class="header__nav-item">
                             <a class="header__nav-link" href="#">Home</a>
                         </li>
+                        @*-----------Home End-------------*@
+
+                        @*-----------Movies Start-------------*@
                         <li class="header__nav-item">
-                            <a class="header__nav-link" href="#" role="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Movies<svg width="4" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.93893 3.30334C1.08141 3.30334 0.384766 2.60669 0.384766 1.75047C0.384766 0.894254 1.08141 0.196308 1.93893 0.196308C2.79644 0.196308 3.49309 0.894254 3.49309 1.75047C3.49309 2.60669 2.79644 3.30334 1.93893 3.30334Z" /></svg></a>
+                            <a class="header__nav-link" href="index.html" role="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Movies<svg width="4" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.93893 3.30334C1.08141 3.30334 0.384766 2.60669 0.384766 1.75047C0.384766 0.894254 1.08141 0.196308 1.93893 0.196308C2.79644 0.196308 3.49309 0.894254 3.49309 1.75047C3.49309 2.60669 2.79644 3.30334 1.93893 3.30334Z" /></svg></a>
 
                             <ul class="dropdown-menu header__nav-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="catalog.html">Something</a></li>
+                                <li><a href="@Url.Action("Index","Movie")">Top 100</a></li>
                                 <li class="dropdown-submenu">
                                     <a class="dropdown-item" href="#" role="button" id="dropdownMenuSub" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catalog dropdown <svg width="4" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.93893 3.30334C1.08141 3.30334 0.384766 2.60669 0.384766 1.75047C0.384766 0.894254 1.08141 0.196308 1.93893 0.196308C2.79644 0.196308 3.49309 0.894254 3.49309 1.75047C3.49309 2.60669 2.79644 3.30334 1.93893 3.30334Z" /></svg></a>
 
@@ -40,6 +45,9 @@
                                 <li><a href="details3.html">Details style 3</a></li>
                             </ul>
                         </li>
+                        @*-----------Movies End-------------*@
+
+                        @*-----------Series Start-------------*@
                         <li class="header__nav-item">
                             <a class="header__nav-link" href="#" role="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Series<svg width="4" height="4" viewBox="0 0 4 4" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.93893 3.30334C1.08141 3.30334 0.384766 2.60669 0.384766 1.75047C0.384766 0.894254 1.08141 0.196308 1.93893 0.196308C2.79644 0.196308 3.49309 0.894254 3.49309 1.75047C3.49309 2.60669 2.79644 3.30334 1.93893 3.30334Z" /></svg></a>
 
@@ -62,7 +70,9 @@
                                 <li><a href="details3.html">Details style 3</a></li>
                             </ul>
                         </li>
-                        <li class="header__nav-item">
+                        @*-----------Series End-------------*@
+
+                        @*-----------MyAccount Start-------------*@
                         <li class="header__nav-item">
                             <a class="header__nav-link header__nav-link--more" href="#" role="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 MyAccount
@@ -82,9 +92,11 @@
                                 <li><a href="404.html">404 Page</a></li>
                             </ul>
                         </li>
+                        @*-----------MyAccount End-------------*@
                     </ul>
 
                     <div class="header__actions">
+                        @*-----------Search Start-------------*@
                         <form action="#" class="header__form">
                             <input class="header__form-input" type="text" placeholder="I'm looking for...">
                             <button class="header__form-btn" type="button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.71,20.29,18,16.61A9,9,0,1,0,16.61,18l3.68,3.68a1,1,0,0,0,1.42,0A1,1,0,0,0,21.71,20.29ZM11,18a7,7,0,1,1,7-7A7,7,0,0,1,11,18Z" /></svg></button>
@@ -94,11 +106,14 @@
                         <button class="header__search" type="button">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.71,20.29,18,16.61A9,9,0,1,0,16.61,18l3.68,3.68a1,1,0,0,0,1.42,0A1,1,0,0,0,21.71,20.29ZM11,18a7,7,0,1,1,7-7A7,7,0,0,1,11,18Z" /></svg>
                         </button>
+                        @*-----------Search End-------------*@
 
+                        @*-----------SignIn Start-------------*@
                         <a href="signin.html" class="header__user">
                             <span>Sign in</span>
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20,12a1,1,0,0,0-1-1H11.41l2.3-2.29a1,1,0,1,0-1.42-1.42l-4,4a1,1,0,0,0-.21.33,1,1,0,0,0,0,.76,1,1,0,0,0,.21.33l4,4a1,1,0,0,0,1.42,0,1,1,0,0,0,0-1.42L11.41,13H19A1,1,0,0,0,20,12ZM17,2H7A3,3,0,0,0,4,5V19a3,3,0,0,0,3,3H17a3,3,0,0,0,3-3V16a1,1,0,0,0-2,0v3a1,1,0,0,1-1,1H7a1,1,0,0,1-1-1V5A1,1,0,0,1,7,4H17a1,1,0,0,1,1,1V8a1,1,0,0,0,2,0V5A3,3,0,0,0,17,2Z" /></svg>
                         </a>
+                        @*-----------SignIn End-------------*@
                     </div>
                 </div>
             </div>
