--- a/FlixTv/Views/Shared/ClientComponents/_Plan.cshtml
+++ b/FlixTv/Views/Shared/ClientComponents/_Plan.cshtml
@@ -6,8 +6,8 @@
                 <p class="section__text">No hidden fees, equipment rentals, or installation appointments.</p>
             </div>
         </div>
-
         <div class="row">
+            @*---------------Regular Start--------------*@
             <div class="col-12 col-md-6 col-xl-4 order-md-2 order-xl-1">
                 <div class="plan">
                     <h3 class="plan__title">Regular</h3>
@@ -21,7 +21,9 @@
                     <button class="plan__btn" type="button">Select plan</button>
                 </div>
             </div>
+            @*---------------Regular End--------------*@
 
+            @*---------------Premium Start--------------*@
             <div class="col-12 col-xl-4 order-md-1 order-xl-2">
                 <div class="plan plan--best">
                     <h3 class="plan__title">Premium</h3>
@@ -35,20 +37,8 @@
                     <button class="plan__btn" type="button">Select plan</button>
                 </div>
             </div>
-
-            <div class="col-12 col-md-6 col-xl-4 order-md-3 order-xl-3">
-                <div class="plan">
-                    <h3 class="plan__title">Premium + TV channels</h3>
-                    <ul class="plan__list">
-                        <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> FlixTV Originals</li>
-                        <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> Switch plans or cancel anytime</li>
-                        <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> Stream 65+ top Live</li>
-                        <li class="green"><svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.43994 6.95981L6.77477 12.2924L17.4399 1.62723" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /></svg> TV channels</li>
-                    </ul>
-                    <span class="plan__price">$49.99<span>/month</span></span>
-                    <button class="plan__btn" type="button">Select plan</button>
-                </div>
-            </div>
+            @*---------------Regular End--------------*@         
         </div>
     </div>
 </section>
+
