--- a/FlixTv/Views/Shared/_ClientLayout.cshtml
+++ b/FlixTv/Views/Shared/_ClientLayout.cshtml
@@ -25,33 +25,22 @@
 
 </head>
 
-<body>
+<body >
+
     <!-- header (relative style) -->
     @Html.Partial("~/Views/Shared/ClientComponents/_NavigationBar.cshtml")
     <!-- end header -->
 
     @RenderBody()
 
-    <!-- catalog -->
-    @Html.Partial("~/Views/Shared/ClientComponents/_Catalog.cshtml")
-    <!-- end catalog -->
-    <!-- plan -->
-    @Html.Partial("~/Views/Shared/ClientComponents/_Plan.cshtml")
-    <!-- end plan -->
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
     <!-- footer -->
     @Html.Partial("~/Views/Shared/ClientComponents/_Footer.cshtml")
     <!-- end footer -->
-    <!-- JS -->
-    <script src="~/www/main/js/jquery-3.5.1.min.js"></script>
-    <script src="~/www/main/js/bootstrap.bundle.min.js"></script>
-    <script src="~/www/main/js/owl.carousel.min.js"></script>
-    <script src="~/www/main/js/slider-radio.js"></script>
-    <script src="~/www/main/js/select2.min.js"></script>
-    <script src="~/www/main/js/smooth-scrollbar.js"></script>
-    <script src="~/www/main/js/jquery.magnific-popup.min.js"></script>
-    <script src="~/www/main/js/plyr.min.js"></script>
-    <script src="~/www/main/js/main.js"></script>
-
-
+    
+  
 </body>
 </html>
