--- a/FlixTv/Views/Shared/ClientComponents/_Catalog.cshtml
+++ b/FlixTv/Views/Shared/ClientComponents/_Catalog.cshtml
@@ -1,4 +1,12 @@
-﻿
+﻿<script src="~/www/main/js/jquery-3.5.1.min.js"></script>
+<script src="~/www/main/js/bootstrap.bundle.min.js"></script>
+<script src="~/www/main/js/owl.carousel.min.js"></script>
+<script src="~/www/main/js/slider-radio.js"></script>
+<script src="~/www/main/js/select2.min.js"></script>
+<script src="~/www/main/js/smooth-scrollbar.js"></script>
+<script src="~/www/main/js/jquery.magnific-popup.min.js"></script>
+<script src="~/www/main/js/plyr.min.js"></script>
+<script src="~/www/main/js/main.js"></script>
 
 
 <!-- Movies for User -->
