Home Page Ready

--- a/FlixTv/Views/Shared/ClientComponents/_NavigationBar.cshtml
+++ b/FlixTv/Views/Shared/ClientComponents/_NavigationBar.cshtml
@@ -18,7 +18,7 @@
                     <ul class="header__nav">
                         @*-----------Home Start-------------*@
                         <li class="header__nav-item">
-                            <a class="header__nav-link" href="#">Home</a>
+                            <a class="header__nav-link" href="@Url.Action("Index", "Home")">Home</a>
                         </li>
                         @*-----------Home End-------------*@
 
