--- a/FlixTv/Views/Movie/Index.cshtml
+++ b/FlixTv/Views/Movie/Index.cshtml
@@ -1,1 +1,24 @@
-﻿
+﻿@{
+    ViewBag.Title = "Index";
+}
+
+@Html.Partial("~/Views/Movie/_MovieCategories.cshtml")
+
+
+
+@section scripts{
+    <script src="~/www/main/js/jquery-3.5.1.min.js"></script>
+    <script src="~/www/main/js/bootstrap.bundle.min.js"></script>
+    <script src="~/www/main/js/owl.carousel.min.js"></script>
+    <script src="~/www/main/js/slider-radio.js"></script>
+    <script src="~/www/main/js/select2.min.js"></script>
+    <script src="~/www/main/js/smooth-scrollbar.js"></script>
+    <script src="~/www/main/js/jquery.magnific-popup.min.js"></script>
+    <script src="~/www/main/js/plyr.min.js"></script>
+    <script src="~/www/main/js/main.js"></script>
+    
+    
+    
+    
+    
+    }
