--- a/FlixTv/Views/Home/Index.cshtml
+++ b/FlixTv/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
 }
 
-@Html.Partial("~/Views/Shared/ClientComponents/_Catalog.cshtml")
+@Html.Partial("~/Views/Home/_Catalog.cshtml")
 
 @Html.Partial("~/Views/Shared/ClientComponents/_Plan.cshtml")
 
