--- a/FlixTv/Views/Home/Index.cshtml
+++ b/FlixTv/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
             let settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "https://ott-details.p.rapidapi.com/advancedsearch?start_year=1990&end_year=2023&min_imdb=7.5&genre=drama&type=movie&page=1'",
+                "url": "https://ott-details.p.rapidapi.com/advancedsearch?start_year=1990&end_year=2023&min_imdb=7.5&genre=drama&language=english%2Cgreek%2Cfrench%2Citalian&type=movie&page=1",
                 "method": "GET",
                 "timeout": 0,
                 "headers": {
