--- a/FlixTv/Views/Movie/_FilterBar.cshtml
+++ b/FlixTv/Views/Movie/_FilterBar.cshtml
@@ -1,4 +1,5 @@
-﻿<!-- head -->
+﻿
+<!-- head -->
 <section class="section section--head section--head-fixed">
     <div class="container">
         <div class="row">
@@ -63,7 +64,7 @@
                             <option value="6">2021</option>
                         </select>
 
-                        <a href="@Url.Action("Category", "Movie",222)">Search</a>
+                        <a href="@Url.Action("Category", "Movie", new {Genre="comedy", Year=2002})">Search</a>
                     </div>
                 </div>
             </div>
