--- a/FlixTv/Views/Movie/_FilterBar.cshtml
+++ b/FlixTv/Views/Movie/_FilterBar.cshtml
@@ -1,22 +1,5 @@
 ﻿
-<!-- head -->
-<section class="section section--head section--head-fixed">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-xl-6">
-                <h1 class="section__title section__title--head">Categories</h1>
-            </div>
 
-            <div class="col-12 col-xl-6">
-                <ul class="breadcrumb">
-                    <li class="breadcrumb__item"><a href="@Url.Action("Index", "Home")">Home</a></li>
-                    <li class="breadcrumb__item breadcrumb__item--active">Movies</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- end head -->
 <!-- Filters Bar -->
 <div class="catalog catalog--page catalog--list">
     <div class="container">
@@ -64,7 +47,7 @@
                             <option value="6">2021</option>
                         </select>
 
-                        <a href="@Url.Action("Category", "Movie", new {Genre="comedy", Year=2002})">Search</a>
+                        <a href="@Url.Action("Category", "Movie", new {Genre="Comedy", Year=2000})">Search</a>
                     </div>
                 </div>
             </div>
