--- a/FlixTv/Views/Movie/Details.cshtml
+++ b/FlixTv/Views/Movie/Details.cshtml
@@ -17,7 +17,6 @@
     <script src="~/www/main/js/jquery.magnific-popup.min.js"></script>
     <script src="~/www/main/js/plyr.min.js"></script>
     <script src="~/www/main/js/main.js"></script>
-
 }
 
 <script>
@@ -56,14 +55,14 @@
                 let genre = details.genre;
                 let releaseYear = details.released;
                 let duration = details.runtime ?? "min";
-            let url = details.imageurl[0];
-            console.log("helllllllooooo");
-            console.log(url);
-            $("#rating").html(rating);
-            $("#genre").html(genre);
-            $("#year").html(releaseYear);
+                let url = details.imageurl[0];
+
+                $("#rating").html(rating);
+                $("#genre").html(genre);
+                $("#year").html(releaseYear);
             $("#duration").html(duration);
-            @*$("#image").attr("data-bg",@Html.Raw("https://m.media-amazon.com/images/M/MV5BZTBlOTczMzctY2QzYi00OGI0LTk3MTYtM2NjMzA1N2MwYjAyXkEyXkFqcGdeQXVyNjk1MTU4ODI@._V1_UX182_CR0,0,182,268_AL_.jpg"  );*@
+            $("#image").css("background", `url(${url}&quot;)`);
+        
         };
         /*---------------------Add Details End-------------------------*/
 
