--- a/FlixTv/Views/Movie/_FilterBar.cshtml
+++ b/FlixTv/Views/Movie/_FilterBar.cshtml
@@ -18,7 +18,7 @@
                         <form action="https://localhost:44353/Movie/Category" method="get">
 
                             <select class="catalog__select" name="Genre">
-                                <option value="All genres">All genres</option>
+                                <option value="AllGenres">All genres</option>
                                 <option value="Action">Action</option>
                                 <option value="Adventure">Adventure</option>
                                 <option value="Biography">Biography</option>
@@ -47,16 +47,70 @@
                             </select>
 
                             <select class="catalog__select" name="Year">
-                                <option value="All the years">All the years</option>
-                                <option value="1">'70s</option>
-                                <option value="2">'80s</option>
-                                <option value="3">'90s</option>
-                                <option value="4">2000-10</option>
-                                <option value="5">2010-20</option>
-                                <option value="6">2021</option>
+                                <option value="AllYears">All the years</option>
+                                <option value="2022">Best of 2022</option>
+                                <option value="2021">Best of 2021</option>
+                                <option value="20100">Best of 2010-20</option>
+                                <option value="20000">Best of 2000-10</option>
+                                <option value="19900">Best of '90s</option>
+                                <option value="19800">Best of '80s</option>
+                                <option value="19700">Best of '70s'</option>
+                                <option value="2020">2020</option>
+                                <option value="2019">2019</option>
+                                <option value="2018">2018</option>
+                                <option value="2017">2017</option>
+                                <option value="2016">2016</option>
+                                <option value="2015">2015</option>
+                                <option value="2014">2014</option>
+                                <option value="2013">2013</option>
+                                <option value="2012">2012</option>
+                                <option value="2011">2011</option>
+                                <option value="2010">2010</option>
+                                <option value="2009">2009</option>
+                                <option value="2008">2008</option>
+                                <option value="2007">2007</option>
+                                <option value="2006">2006</option>
+                                <option value="2005">2005</option>
+                                <option value="2004">2004</option>
+                                <option value="2003">2003</option>
+                                <option value="2002">2002</option>
+                                <option value="2001">2001</option>
+                                <option value="2000">2000</option>
+                                <option value="1999">1999</option>
+                                <option value="1998">1998</option>
+                                <option value="1997">1997</option>
+                                <option value="1996">1996</option>
+                                <option value="1995">1995</option>
+                                <option value="1994">1994</option>
+                                <option value="1993">1993</option>
+                                <option value="1992">1992</option>
+                                <option value="1991">1991</option>
+                                <option value="1990">1990</option>
+                                <option value="1989">1989</option>
+                                <option value="1988">1988</option>
+                                <option value="1987">1987</option>
+                                <option value="1986">1986</option>
+                                <option value="1985">1985</option>
+                                <option value="1984">1984</option>
+                                <option value="1983">1983</option>
+                                <option value="1982">1982</option>
+                                <option value="1981">1981</option>
+                                <option value="1980">1980</option>
+                                <option value="1979">1979</option>
+                                <option value="1978">1978</option>
+                                <option value="1976">1976</option>
+                                <option value="1975">1975</option>
+                                <option value="1974">1974</option>
+                                <option value="1973">1973</option>
+                                <option value="1972">1972</option>
+                                <option value="1971">1971</option>
+                                <option value="1970">1970</option>
+                                
                             </select>
 
-                            <button id="search-btn" >Search</button>
+                           
+
+                            <button id="search-btn">Search</button>
                         </form>
 
                     </div>
