--- a/FlixTv/Views/Movie/Index.cshtml
+++ b/FlixTv/Views/Movie/Index.cshtml
@@ -50,7 +50,7 @@
             let settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "https://ott-details.p.rapidapi.com/advancedsearch?type=movie&sort=latest",
+                "url": "https://ott-details.p.rapidapi.com/advancedsearch?type=movie&sort=latest&min_imdb=8",
                 "method": "GET",
                 "timeout": 0,
                 "headers": {
