--- a/FlixTv/Views/Movie/_MovieCategories.cshtml
+++ b/FlixTv/Views/Movie/_MovieCategories.cshtml
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="section__title"><a href="category.html">New Releases</a></h2>
+                <h2 class="section__title"><a href="https://localhost:44353/Movie/Category?Year=2022&">New Releases</a></h2>
             </div>
 
             <div class="col-12">
